# gray-scott-kokkos

./: .dockerignore  .gitignore  LICENSE  README.md  bump_version.sh  plot_weak_scaling.py  typos.toml
.github/: dependabot.yaml
.github/workflows/: courses.yml  docker.yml  exercises.yml  spelling.yml
BuffersAccessors_to_Kokkos/: make.bash
BuffersAccessors_to_Kokkos/src/: gray-scott.cpp
MallocDevice_to_Kokkos/: make.bash
MallocDevice_to_Kokkos/src/: gray-scott.cpp
MallocShared_to_Kokkos/: run.bash
MallocShared_to_Kokkos/src/: gray-scott.cpp
Overlap_to_Kokkos/: mp4.bash  run.bash
Overlap_to_Kokkos/src/: gray-scott.cpp
WorkGroups_to_Kokkos/: CMakeLists.txt  run.bash
WorkGroups_to_Kokkos/src/: gray-scott.cpp
courses/: .latexmkrc  Makefile  beamercolorthemegray-scott.sty  beamerinnerthemegray-scott.sty  beamerouterthemegray-scott.sty  beamerthemegray-scott.sty  kokkos_cpu.tex  kokkos_cpu_commands.md  kokkos_gpu.tex  kokkos_gpu_commands.md
docker/: build.sh
docker/cpu/interactive/: Dockerfile
docker/cpu/interactive_jupyter/: Dockerfile
docker/cpu/interactive_vscode/: Dockerfile
docker/cpu/learning_platform_code_server/: Dockerfile
docker/gpu/interactive/: Dockerfile
docker/gpu/interactive_jupyter/: Dockerfile
docker/gpu/interactive_vscode/: Dockerfile
docker/gpu/learning_platform_code_server/: Dockerfile
exercises/: CMakeLists.txt  dependencies.cmake
exercises/common/: CMakeLists.txt  helpers.hpp  helpers_pod.hpp  macros_pod.hpp  output_writer.hpp  parameters.cpp  parameters.hpp
exercises/cpu/: CMakeLists.txt  gray_scott_cpu.cpp
exercises/cpu_base/: CMakeLists.txt  gray_scott_cpu_base.cpp
exercises/cpu_base_0_views/: CMakeLists.txt  gray_scott_cpu_base_0_views.cpp
exercises/cpu_base_1_parallel_for/: CMakeLists.txt  gray_scott_cpu_base_1_parallel_for.cpp
exercises/cpu_more_simd/: CMakeLists.txt  gray_scott_cpu_more_simd.cpp
exercises/cpu_more_simd_0_naive/: CMakeLists.txt  gray_scott_cpu_more_simd_0_naive.cpp
exercises/cpu_parallel_for/: CMakeLists.txt
exercises/cpu_parallel_reduce/: CMakeLists.txt
exercises/cpu_simd/: CMakeLists.txt  gray_scott_cpu_simd.cpp
exercises/cpu_views/: CMakeLists.txt
exercises/gpu/: CMakeLists.txt  gray_scott_gpu.cpp
exercises/gpu_async/: CMakeLists.txt  gray_scott_gpu_async.cpp
exercises/gpu_async_more/: CMakeLists.txt  gray_scott_gpu_async_more.cpp
exercises/gpu_base/: CMakeLists.txt  gray_scott_gpu_base.cpp
exercises/gpu_base_0_shared_space/: CMakeLists.txt  gray_scott_gpu_base_0_shared_space.cpp
exercises/gpu_base_1_fences/: CMakeLists.txt  gray_scott_gpu_base_1_fences.cpp
exercises/gpu_base_2_layout_iterate/: CMakeLists.txt  gray_scott_gpu_base_2_layout_iterate.cpp
exercises/gpu_fences/: CMakeLists.txt  gray_scott_gpu_fences.cpp
exercises/gpu_layout_iterate/: CMakeLists.txt
exercises/gpu_more_async/: CMakeLists.txt  gray_scott_gpu_more_async.cpp
exercises/gpu_more_async_0_write/: CMakeLists.txt  gray_scott_gpu_more_async_0_write.cpp
exercises/gpu_shared_space/: CMakeLists.txt
exercises/gray_scott/: CMakeLists.txt  gray_scott.cpp
exercises/hello_world/: CMakeLists.txt  gray_scott_hello.cpp
exercises/scripts/: check_outcome.sh  plot_performance.py  plot_strong_scaling.py  run_all.sh
exercises/scripts/data/: gray_scott.h5
exercises/sequential/: CMakeLists.txt  CMakeLists.txt.sample  gray_scott_sequential.cpp
naive/: CMakeLists.txt  common.cmake  dependencies.cmake  helpers.hpp  naive.cpp  naive_cpu.cpp  naive_gpu.cpp  naive_seq.cpp  output_write.hpp  output_writer.hpp  parameters.hpp
naive/common/: CMakeLists.txt  helpers.hpp  helpers_pod.hpp  macros_pod.hpp  output_writer.hpp  output_writer_pod.hpp  parameters.cpp  parameters.hpp
naive/cpu/: CMakeLists.txt  gray_scott_cpu.cpp
naive/gpu/: CMakeLists.txt  gray_scott_gpu.cpp
naive/gpu_async/: CMakeLists.txt  gray_scott_gpu_async.cpp
naive/gpu_async_more/: CMakeLists.txt  gray_scott_gpu_async_more.cpp
naive/gpu_graph/: CMakeLists.txt  captures.hpp  gray_scott_gpu_graph.cpp
naive/hello_world/: CMakeLists.txt
naive/sequential/: gray_scott_sequential.cpp
naive/simd/: CMakeLists.txt  gray_scott_simd.cpp
